add(configurable layer: factory, regestry and other related stuff include package privating constructors and Configurable* interface)